test notebook version

--- a/02/Ex01.ipynb
+++ b/02/Ex01.ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hai Phó chủ tịch UBND TP HCM nhận nhiệm vụ mới', '6 trường hợp sổ đỏ sẽ bị thu hồi từ năm 2025', 'Điều chỉnh mức đóng BHXH sau cải cách tiền lương', 'Khánh thành 2 cầu kết nối huyện với trung tâm TP Cần Thơ', 'Đại tướng Tô Lâm, ông Trần Thanh Mẫn được giới thiệu để bầu Chủ tịch nước, Chủ tịch Quốc hội', \"'Doanh nghiệp làm nhà ở xã hội cho thuê là tự sát'\", 'Sầm Sơn 100 năm trước', 'Hiện trạng nút giao liên kết 3 cao tốc nối TP HCM với miền Tây', 'Thủ tướng yêu cầu hoàn thành thanh tra thị trường vàng trong tháng 5', '32 năm tìm kiếm logo của TP Hải Phòng']\n"
+      "['Hai Phó chủ tịch UBND TP HCM nhận nhiệm vụ mới', '6 trường hợp sổ đỏ sẽ bị thu hồi từ năm 2025', 'Điều chỉnh mức đóng BHXH sau cải cách tiền lương', 'Khánh thành cầu bắc qua sông Cần Thơ', 'Đại tướng Tô Lâm, ông Trần Thanh Mẫn được giới thiệu để bầu Chủ tịch nước, Chủ tịch Quốc hội', \"'Doanh nghiệp làm nhà ở xã hội cho thuê là tự sát'\", 'Sầm Sơn 100 năm trước', 'Hiện trạng nút giao liên kết 3 cao tốc nối TP HCM với miền Tây', 'Thủ tướng yêu cầu hoàn thành thanh tra thị trường vàng trong tháng 5', '32 năm tìm kiếm logo của TP Hải Phòng']\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e962498c-b857-40a1-8935-635c5f3c0a2b",
    "metadata": {},
    "outputs": [
@@ -173,8 +173,8 @@
        "│ 2   │ Điều chỉnh mức đóng BHXH sau cải  │ Điều_chỉnh mức đóng BHXH sau      │ Điều_chỉnh mức đóng BHXH sau      │\n",
        "│     │ cách tiền lương                   │ cải_cách tiền_lương               │ cải_cách tiền_lương               │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 3   │ Khánh thành 2 cầu kết nối huyện   │ Khánh_thành 2 cầu kết_nối huyện   │ Khánh_thành 2 cầu kết_nối huyện   │\n",
-       "│     │ với trung tâm TP Cần Thơ          │ với trung_tâm TP Cần_Thơ          │ với trung_tâm TP Cần_Thơ          │\n",
+       "│ 3   │ Khánh thành cầu bắc qua sông Cần  │ Khánh_thành cầu bắc qua sông      │ Khánh_thành cầu bắc qua sông      │\n",
+       "│     │ Thơ                               │ Cần_Thơ                           │ Cần_Thơ                           │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
        "│ 4   │ Đại tướng Tô Lâm, ông Trần Thanh  │ Đại_tướng Tô_Lâm , ông            │ Đại_tướng Tô_Lâm , ông            │\n",
        "│     │ Mẫn được giới thiệu để bầu Chủ    │ Trần_Thanh_Mẫn được giới_thiệu để │ Trần_Thanh_Mẫn được giới_thiệu để │\n",
@@ -212,8 +212,8 @@
        "│ 2   │ Điều chỉnh mức đóng BHXH sau cải  │ Điều_chỉnh mức đóng BHXH sau      │ Điều_chỉnh mức đóng BHXH sau      │\n",
        "│     │ cách tiền lương                   │ cải_cách tiền_lương               │ cải_cách tiền_lương               │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 3   │ Khánh thành 2 cầu kết nối huyện   │ Khánh_thành 2 cầu kết_nối huyện   │ Khánh_thành 2 cầu kết_nối huyện   │\n",
-       "│     │ với trung tâm TP Cần Thơ          │ với trung_tâm TP Cần_Thơ          │ với trung_tâm TP Cần_Thơ          │\n",
+       "│ 3   │ Khánh thành cầu bắc qua sông Cần  │ Khánh_thành cầu bắc qua sông      │ Khánh_thành cầu bắc qua sông      │\n",
+       "│     │ Thơ                               │ Cần_Thơ                           │ Cần_Thơ                           │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
        "│ 4   │ Đại tướng Tô Lâm, ông Trần Thanh  │ Đại_tướng Tô_Lâm , ông            │ Đại_tướng Tô_Lâm , ông            │\n",
        "│     │ Mẫn được giới thiệu để bầu Chủ    │ Trần_Thanh_Mẫn được giới_thiệu để │ Trần_Thanh_Mẫn được giới_thiệu để │\n",
