--- a/02/Ex01.ipynb
+++ b/02/Ex01.ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hai Phó chủ tịch UBND TP HCM nhận nhiệm vụ mới', '6 trường hợp sổ đỏ sẽ bị thu hồi từ năm 2025', 'Điều chỉnh mức đóng BHXH sau cải cách tiền lương', 'Khánh thành cầu bắc qua sông Cần Thơ', 'Đại tướng Tô Lâm, ông Trần Thanh Mẫn được giới thiệu để bầu Chủ tịch nước, Chủ tịch Quốc hội', \"'Doanh nghiệp làm nhà ở xã hội cho thuê là tự sát'\", 'Sầm Sơn 100 năm trước', 'Hiện trạng nút giao liên kết 3 cao tốc nối TP HCM với miền Tây', 'Thủ tướng yêu cầu hoàn thành thanh tra thị trường vàng trong tháng 5', '32 năm tìm kiếm logo của TP Hải Phòng']\n"
+      "['Nước sông Bắc Hưng Hải đen kịt', 'Lính Ukraine kể về đòn tập hậu của đặc nhiệm Nga ở Kharkov', 'Khen thưởng 4 người cứu nạn nhân vụ cháy ở Trung Kính', 'Hamas tuyên bố phục kích, bắt sống binh sĩ Israel', 'Nhà đầu tư nên làm gì sau phiên chứng khoán giảm mạnh?', 'Doanh nghiệp tìm cách thích nghi với Gen Z', 'Hai công nhân tử vong vì tai nạn lao động', 'Phim 18+ về vũ công thoát y đoạt giải Cành Cọ Vàng 2024', 'Sân bay Hòa Lạc, Gia Lâm sẽ hoạt động cả quân sự và dân dụng', 'Tranh cãi về tính chính danh của Tổng thống Zelensky']\n"
      ]
     }
    ],
@@ -164,37 +164,34 @@
        "┏━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> STT </span>┃<span style=\"font-weight: bold\"> Nội dung                          </span>┃<span style=\"font-weight: bold\"> PyVi                              </span>┃<span style=\"font-weight: bold\"> UndertheSea                       </span>┃\n",
        "┡━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│ 0   │ Hai Phó chủ tịch UBND TP HCM nhận │ Hai Phó_chủ_tịch UBND TP HCM nhận │ Hai Phó chủ_tịch UBND TP HCM nhận │\n",
-       "│     │ nhiệm vụ mới                      │ nhiệm_vụ mới                      │ nhiệm_vụ mới                      │\n",
+       "│ 0   │ Nước sông Bắc Hưng Hải đen kịt    │ Nước sông Bắc_Hưng Hải đen_kịt    │ Nước sông Bắc_Hưng_Hải đen_kịt    │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 1   │ 6 trường hợp sổ đỏ sẽ bị thu hồi  │ 6 trường_hợp sổ_đỏ sẽ bị thu_hồi  │ 6 trường_hợp sổ_đỏ sẽ bị thu_hồi  │\n",
-       "│     │ từ năm 2025                       │ từ năm 2025                       │ từ năm 2025                       │\n",
+       "│ 1   │ Lính Ukraine kể về đòn tập hậu    │ Lính Ukraine kể về đòn tập_hậu    │ Lính Ukraine kể về đòn tập_hậu    │\n",
+       "│     │ của đặc nhiệm Nga ở Kharkov       │ của đặc_nhiệm Nga ở Kharkov       │ của đặc_nhiệm Nga ở Kharkov       │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 2   │ Điều chỉnh mức đóng BHXH sau cải  │ Điều_chỉnh mức đóng BHXH sau      │ Điều_chỉnh mức đóng BHXH sau      │\n",
-       "│     │ cách tiền lương                   │ cải_cách tiền_lương               │ cải_cách tiền_lương               │\n",
+       "│ 2   │ Khen thưởng 4 người cứu nạn nhân  │ Khen_thưởng 4 người cứu nạn_nhân  │ Khen_thưởng 4 người cứu nạn_nhân  │\n",
+       "│     │ vụ cháy ở Trung Kính              │ vụ cháy ở Trung_Kính              │ vụ cháy ở Trung_Kính              │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 3   │ Khánh thành cầu bắc qua sông Cần  │ Khánh_thành cầu bắc qua sông      │ Khánh_thành cầu bắc qua sông      │\n",
-       "│     │ Thơ                               │ Cần_Thơ                           │ Cần_Thơ                           │\n",
+       "│ 3   │ Hamas tuyên bố phục kích, bắt     │ Hamas tuyên_bố phục_kích , bắt    │ Hamas tuyên_bố phục_kích , bắt    │\n",
+       "│     │ sống binh sĩ Israel               │ sống binh_sĩ Israel               │ sống binh_sĩ Israel               │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 4   │ Đại tướng Tô Lâm, ông Trần Thanh  │ Đại_tướng Tô_Lâm , ông            │ Đại_tướng Tô_Lâm , ông            │\n",
-       "│     │ Mẫn được giới thiệu để bầu Chủ    │ Trần_Thanh_Mẫn được giới_thiệu để │ Trần_Thanh_Mẫn được giới_thiệu để │\n",
-       "│     │ tịch nước, Chủ tịch Quốc hội      │ bầu Chủ_tịch nước , Chủ_tịch      │ bầu Chủ_tịch nước , Chủ_tịch      │\n",
-       "│     │                                   │ Quốc_hội                          │ Quốc_hội                          │\n",
+       "│ 4   │ Nhà đầu tư nên làm gì sau phiên   │ Nhà đầu_tư nên làm gì sau         │ Nhà_đầu_tư nên làm gì sau phiên   │\n",
+       "│     │ chứng khoán giảm mạnh?            │ phiên_chứng_khoán giảm mạnh ?     │ chứng_khoán giảm mạnh ?           │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 5   │ 'Doanh nghiệp làm nhà ở xã hội    │ ' Doanh_nghiệp làm nhà ở xã_hội   │ ' Doanh_nghiệp làm nhà ở xã_hội   │\n",
-       "│     │ cho thuê là tự sát'               │ cho thuê là tự_sát '              │ cho thuê là tự_sát '              │\n",
+       "│ 5   │ Doanh nghiệp tìm cách thích nghi  │ Doanh_nghiệp tìm cách thích_nghi  │ Doanh_nghiệp tìm cách thích_nghi  │\n",
+       "│     │ với Gen Z                         │ với Gen_Z                         │ với Gen Z                         │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 6   │ Sầm Sơn 100 năm trước             │ Sầm_Sơn 100 năm trước             │ Sầm_Sơn 100 năm trước             │\n",
+       "│ 6   │ Hai công nhân tử vong vì tai nạn  │ Hai công_nhân tử_vong vì tai_nạn  │ Hai công_nhân tử_vong vì tai_nạn  │\n",
+       "│     │ lao động                          │ lao_động                          │ lao_động                          │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 7   │ Hiện trạng nút giao liên kết 3    │ Hiện_trạng nút giao_liên_kết 3    │ Hiện_trạng nút giao liên_kết 3    │\n",
-       "│     │ cao tốc nối TP HCM với miền Tây   │ cao_tốc nối TP HCM với miền Tây   │ cao_tốc nối TP HCM với miền Tây   │\n",
+       "│ 7   │ Phim 18+ về vũ công thoát y đoạt  │ Phim 18 + về vũ_công thoát y đoạt │ Phim 18 + về vũ_công_thoát y_đoạt │\n",
+       "│     │ giải Cành Cọ Vàng 2024            │ giải Cành Cọ Vàng 2024            │ giải Cành Cọ_Vàng 2024            │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 8   │ Thủ tướng yêu cầu hoàn thành      │ Thủ_tướng yêu_cầu hoàn_thành      │ Thủ_tướng yêu_cầu hoàn_thành      │\n",
-       "│     │ thanh tra thị trường vàng trong   │ thanh_tra thị_trường vàng trong   │ thanh_tra thị_trường vàng trong   │\n",
-       "│     │ tháng 5                           │ tháng 5                           │ tháng 5                           │\n",
+       "│ 8   │ Sân bay Hòa Lạc, Gia Lâm sẽ hoạt  │ Sân_bay Hòa_Lạc , Gia_Lâm sẽ      │ Sân_bay Hòa_Lạc , Gia_Lâm sẽ      │\n",
+       "│     │ động cả quân sự và dân dụng       │ hoạt_động cả quân_sự và dân_dụng  │ hoạt_động cả quân_sự và dân_dụng  │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 9   │ 32 năm tìm kiếm logo của TP Hải   │ 32 năm tìm_kiếm logo của TP       │ 32 năm tìm_kiếm logo của TP       │\n",
-       "│     │ Phòng                             │ Hải_Phòng                         │ Hải_Phòng                         │\n",
+       "│ 9   │ Tranh cãi về tính chính danh của  │ Tranh_cãi về tính chính_danh của  │ Tranh_cãi về tính chính_danh của  │\n",
+       "│     │ Tổng thống Zelensky               │ Tổng_thống Zelensky               │ Tổng_thống Zelensky               │\n",
        "└─────┴───────────────────────────────────┴───────────────────────────────────┴───────────────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -203,37 +200,34 @@
        "┏━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mSTT\u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mNội dung                         \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mPyVi                             \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mUndertheSea                      \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│ 0   │ Hai Phó chủ tịch UBND TP HCM nhận │ Hai Phó_chủ_tịch UBND TP HCM nhận │ Hai Phó chủ_tịch UBND TP HCM nhận │\n",
-       "│     │ nhiệm vụ mới                      │ nhiệm_vụ mới                      │ nhiệm_vụ mới                      │\n",
+       "│ 0   │ Nước sông Bắc Hưng Hải đen kịt    │ Nước sông Bắc_Hưng Hải đen_kịt    │ Nước sông Bắc_Hưng_Hải đen_kịt    │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 1   │ 6 trường hợp sổ đỏ sẽ bị thu hồi  │ 6 trường_hợp sổ_đỏ sẽ bị thu_hồi  │ 6 trường_hợp sổ_đỏ sẽ bị thu_hồi  │\n",
-       "│     │ từ năm 2025                       │ từ năm 2025                       │ từ năm 2025                       │\n",
+       "│ 1   │ Lính Ukraine kể về đòn tập hậu    │ Lính Ukraine kể về đòn tập_hậu    │ Lính Ukraine kể về đòn tập_hậu    │\n",
+       "│     │ của đặc nhiệm Nga ở Kharkov       │ của đặc_nhiệm Nga ở Kharkov       │ của đặc_nhiệm Nga ở Kharkov       │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 2   │ Điều chỉnh mức đóng BHXH sau cải  │ Điều_chỉnh mức đóng BHXH sau      │ Điều_chỉnh mức đóng BHXH sau      │\n",
-       "│     │ cách tiền lương                   │ cải_cách tiền_lương               │ cải_cách tiền_lương               │\n",
+       "│ 2   │ Khen thưởng 4 người cứu nạn nhân  │ Khen_thưởng 4 người cứu nạn_nhân  │ Khen_thưởng 4 người cứu nạn_nhân  │\n",
+       "│     │ vụ cháy ở Trung Kính              │ vụ cháy ở Trung_Kính              │ vụ cháy ở Trung_Kính              │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 3   │ Khánh thành cầu bắc qua sông Cần  │ Khánh_thành cầu bắc qua sông      │ Khánh_thành cầu bắc qua sông      │\n",
-       "│     │ Thơ                               │ Cần_Thơ                           │ Cần_Thơ                           │\n",
+       "│ 3   │ Hamas tuyên bố phục kích, bắt     │ Hamas tuyên_bố phục_kích , bắt    │ Hamas tuyên_bố phục_kích , bắt    │\n",
+       "│     │ sống binh sĩ Israel               │ sống binh_sĩ Israel               │ sống binh_sĩ Israel               │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 4   │ Đại tướng Tô Lâm, ông Trần Thanh  │ Đại_tướng Tô_Lâm , ông            │ Đại_tướng Tô_Lâm , ông            │\n",
-       "│     │ Mẫn được giới thiệu để bầu Chủ    │ Trần_Thanh_Mẫn được giới_thiệu để │ Trần_Thanh_Mẫn được giới_thiệu để │\n",
-       "│     │ tịch nước, Chủ tịch Quốc hội      │ bầu Chủ_tịch nước , Chủ_tịch      │ bầu Chủ_tịch nước , Chủ_tịch      │\n",
-       "│     │                                   │ Quốc_hội                          │ Quốc_hội                          │\n",
+       "│ 4   │ Nhà đầu tư nên làm gì sau phiên   │ Nhà đầu_tư nên làm gì sau         │ Nhà_đầu_tư nên làm gì sau phiên   │\n",
+       "│     │ chứng khoán giảm mạnh?            │ phiên_chứng_khoán giảm mạnh ?     │ chứng_khoán giảm mạnh ?           │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 5   │ 'Doanh nghiệp làm nhà ở xã hội    │ ' Doanh_nghiệp làm nhà ở xã_hội   │ ' Doanh_nghiệp làm nhà ở xã_hội   │\n",
-       "│     │ cho thuê là tự sát'               │ cho thuê là tự_sát '              │ cho thuê là tự_sát '              │\n",
+       "│ 5   │ Doanh nghiệp tìm cách thích nghi  │ Doanh_nghiệp tìm cách thích_nghi  │ Doanh_nghiệp tìm cách thích_nghi  │\n",
+       "│     │ với Gen Z                         │ với Gen_Z                         │ với Gen Z                         │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 6   │ Sầm Sơn 100 năm trước             │ Sầm_Sơn 100 năm trước             │ Sầm_Sơn 100 năm trước             │\n",
+       "│ 6   │ Hai công nhân tử vong vì tai nạn  │ Hai công_nhân tử_vong vì tai_nạn  │ Hai công_nhân tử_vong vì tai_nạn  │\n",
+       "│     │ lao động                          │ lao_động                          │ lao_động                          │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 7   │ Hiện trạng nút giao liên kết 3    │ Hiện_trạng nút giao_liên_kết 3    │ Hiện_trạng nút giao liên_kết 3    │\n",
-       "│     │ cao tốc nối TP HCM với miền Tây   │ cao_tốc nối TP HCM với miền Tây   │ cao_tốc nối TP HCM với miền Tây   │\n",
+       "│ 7   │ Phim 18+ về vũ công thoát y đoạt  │ Phim 18 + về vũ_công thoát y đoạt │ Phim 18 + về vũ_công_thoát y_đoạt │\n",
+       "│     │ giải Cành Cọ Vàng 2024            │ giải Cành Cọ Vàng 2024            │ giải Cành Cọ_Vàng 2024            │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 8   │ Thủ tướng yêu cầu hoàn thành      │ Thủ_tướng yêu_cầu hoàn_thành      │ Thủ_tướng yêu_cầu hoàn_thành      │\n",
-       "│     │ thanh tra thị trường vàng trong   │ thanh_tra thị_trường vàng trong   │ thanh_tra thị_trường vàng trong   │\n",
-       "│     │ tháng 5                           │ tháng 5                           │ tháng 5                           │\n",
+       "│ 8   │ Sân bay Hòa Lạc, Gia Lâm sẽ hoạt  │ Sân_bay Hòa_Lạc , Gia_Lâm sẽ      │ Sân_bay Hòa_Lạc , Gia_Lâm sẽ      │\n",
+       "│     │ động cả quân sự và dân dụng       │ hoạt_động cả quân_sự và dân_dụng  │ hoạt_động cả quân_sự và dân_dụng  │\n",
        "├─────┼───────────────────────────────────┼───────────────────────────────────┼───────────────────────────────────┤\n",
-       "│ 9   │ 32 năm tìm kiếm logo của TP Hải   │ 32 năm tìm_kiếm logo của TP       │ 32 năm tìm_kiếm logo của TP       │\n",
-       "│     │ Phòng                             │ Hải_Phòng                         │ Hải_Phòng                         │\n",
+       "│ 9   │ Tranh cãi về tính chính danh của  │ Tranh_cãi về tính chính_danh của  │ Tranh_cãi về tính chính_danh của  │\n",
+       "│     │ Tổng thống Zelensky               │ Tổng_thống Zelensky               │ Tổng_thống Zelensky               │\n",
        "└─────┴───────────────────────────────────┴───────────────────────────────────┴───────────────────────────────────┘\n"
       ]
      },
