done Ex02, Lab03

--- a/03/Ex02.ipynb
+++ b/03/Ex02.ipynb
@@ -61,21 +61,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhân_viên   |phục_vụ     |nhiệt_tình  |,           |nhưng       |đôi_khi     |quên        |yêu_cầu     |của         |khách_hàng  |.           |\n",
-      "N           |V           |N           |F           |C           |R           |V           |V           |E           |N           |F           |\n",
-      "================================================================================================================================================\n",
+      "Bữa         |sáng        |tại         |khách_sạn   |rất         |đa_dạng     |và          |ngon_miệng  |,           |nhưng       |đồ          |uống        |không       |phong_phú   |.           |\n",
+      "N           |A           |E           |N           |R           |A           |C           |N           |F           |C           |N           |V           |R           |A           |F           |\n",
+      "================================================================================================================================================================================================\n",
       "\n",
       "\n",
       "\n",
-      "Phòng       |ở           |rộng_rãi    |và          |đầy_đủ      |tiện_nghi   |,           |nhưng       |cách_âm     |kém         |nên         |khá         |ồn_ào       |.           |\n",
-      "N           |E           |A           |C           |A           |N           |F           |C           |N           |A           |C           |R           |A           |F           |\n",
+      "Cafe        |ở           |đây         |rất         |ngon        |,           |nhưng       |món         |ăn          |kèm         |không       |được        |tươi        |.           |\n",
+      "Np          |E           |P           |R           |A           |F           |C           |N           |V           |V           |R           |V           |A           |F           |\n",
       "====================================================================================================================================================================================\n",
       "\n",
       "\n",
       "\n",
-      "Món         |ăn          |ngon        |và          |trình_bày   |đẹp         |,           |nhưng       |khẩu_phần   |không       |đồng_đều    |.           |\n",
-      "N           |V           |A           |C           |V           |A           |F           |C           |N           |R           |A           |F           |\n",
-      "============================================================================================================================================================\n",
+      "Nhân_viên   |phục_vụ     |nhanh_nhẹn  |,           |nhưng       |không       |niềm_nở     |.           |\n",
+      "N           |V           |A           |F           |C           |R           |A           |F           |\n",
+      "============================================================================================================\n",
       "\n",
       "\n",
       "\n",
@@ -85,39 +85,39 @@
       "\n",
       "\n",
       "\n",
-      "Nhân_viên   |phục_vụ     |nhanh_nhẹn  |,           |nhưng       |không       |chu_đáo     |với         |từng        |bàn         |.           |\n",
-      "N           |V           |A           |F           |C           |R           |A           |E           |P           |N           |F           |\n",
-      "================================================================================================================================================\n",
+      "Nhân_viên   |phục_vụ     |rất         |nhiệt_tình  |,           |nhưng       |đôi_khi     |quên        |yêu_cầu     |của         |khách_hàng  |.           |\n",
+      "N           |V           |R           |A           |F           |C           |R           |V           |V           |E           |N           |F           |\n",
+      "============================================================================================================================================================\n",
       "\n",
       "\n",
       "\n",
-      "Quán        |ăn          |này         |có          |món         |phở         |rất         |ngon        |,           |nhưng       |không_gian  |quá         |chật_chội   |.           |\n",
-      "N           |V           |P           |V           |Nc          |N           |R           |A           |F           |C           |N           |R           |A           |F           |\n",
-      "====================================================================================================================================================================================\n",
+      "Thực_đơn    |phong_phú   |,           |nhưng       |các         |món         |ăn          |đôi_khi     |không       |nhất_quán   |về          |chất_lượng  |.           |\n",
+      "N           |A           |F           |C           |L           |N           |V           |R           |R           |V           |E           |N           |F           |\n",
+      "========================================================================================================================================================================\n",
       "\n",
       "\n",
       "\n",
-      "Nhân_viên   |thân_thiện  |và          |nhiệt_tình  |,           |nhưng       |thiếu       |kỹ_năng     |giải_quyết  |vấn_đề      |.           |\n",
-      "N           |A           |C           |N           |F           |C           |V           |N           |V           |N           |F           |\n",
-      "================================================================================================================================================\n",
-      "\n",
-      "\n",
-      "\n",
-      "Món         |tráng_miệng |tại         |đây         |rất         |ngon        |,           |nhưng       |đồ          |uống        |lại         |không       |được        |đặc_sắc     |.           |\n",
-      "N           |V           |E           |P           |R           |A           |F           |C           |N           |V           |R           |R           |V           |A           |F           |\n",
+      "Đồ          |uống        |ngon        |và          |đa_dạng     |,           |nhưng       |món         |tráng_miệng |không       |đặc_sắc     |và          |ít          |lựa_chọn    |.           |\n",
+      "N           |V           |A           |C           |A           |F           |C           |N           |V           |R           |A           |C           |A           |V           |F           |\n",
       "================================================================================================================================================================================================\n",
       "\n",
       "\n",
       "\n",
-      "Khách_sạn   |có          |vị_trí      |thuận_tiện  |cho         |việc        |đi_lại      |,           |nhưng       |khu_vực     |xung_quanh  |hơi         |ồn_ào       |.           |\n",
-      "N           |V           |N           |A           |E           |N           |V           |F           |C           |N           |N           |N           |A           |F           |\n",
-      "====================================================================================================================================================================================\n",
+      "Vị_trí      |của         |nhà_hàng    |rất         |thuận_tiện  |,           |nhưng       |không       |có          |chỗ         |đậu         |xe          |.           |\n",
+      "N           |E           |N           |R           |A           |F           |C           |R           |V           |N           |V           |N           |F           |\n",
+      "========================================================================================================================================================================\n",
       "\n",
       "\n",
       "\n",
-      "Không_gian  |nhà_hàng    |sạch_sẽ     |,           |nhưng       |bàn         |ghế         |không       |thoải_mái   |.           |\n",
-      "N           |N           |A           |F           |C           |N           |N           |R           |A           |F           |\n",
-      "====================================================================================================================================\n",
+      "Quán        |có          |vị_trí      |thuận_tiện  |,           |nhưng       |không       |có          |chỗ         |đậu         |xe          |.           |\n",
+      "N           |V           |N           |A           |F           |C           |R           |V           |N           |V           |N           |F           |\n",
+      "============================================================================================================================================================\n",
+      "\n",
+      "\n",
+      "\n",
+      "Quán        |có          |view        |nhìn        |ra          |phố         |rất         |đẹp         |,           |nhưng       |bàn         |ghế         |lại         |không       |thoải_mái   |lắm         |.           |\n",
+      "N           |V           |N           |V           |R           |N           |R           |A           |F           |C           |N           |N           |R           |R           |A           |R           |F           |\n",
+      "========================================================================================================================================================================================================================\n",
       "\n",
       "\n",
       "\n"
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'an_toàn': 1.0, 'bình_thường': -1.0, 'cao': -1.0, 'chu_đáo': 1.0, 'chung': 1.0, 'chuyên_nghiệp': 1.0, 'chậm': -1.0, 'chật_chội': -1.0, 'công_phu': 1.0, 'cứng': 1.0, 'dễ': 1.0, 'gần': 1.0, 'hay': 1.0, 'hiện_đại': 1.0, 'hợp_lý': 1.0, 'khác': 1.0, 'khó_chịu': -1.0, 'kém': -1.0, 'lâu': -1.0, 'lãng_mạn': 1.0, 'lịch_sự': 1.0, 'lớn': 1.0, 'mặn': -1.0, 'mới': 1.0, 'ngon': 1.0, 'ngoài_trời': 1.0, 'ngắn': -1.0, 'ngọt': 1.0, 'nhanh': 1.0, 'nhanh_nhẹn': 1.0, 'nhiều': 1.0, 'nhiệt_tình': 1.0, 'nhỏ': -1.0, 'niềm_nở': 1.0, 'no': 1.0, 'nóng': 1.0, 'nổi_tiếng': 1.0, 'phong_phú': 1.0, 'rộng_rãi': 1.0, 'sang_trọng': 1.0, 'sáng': 1.0, 'sạch_sẽ': 1.0, 'sẵn_sàng': 1.0, 'thoáng_đãng': 1.0, 'thoải_mái': 1.0, 'thuận_lợi': 1.0, 'thuận_tiện': 1.0, 'thân_thiện': 1.0, 'thơm': 1.0, 'thư_giãn': 1.0, 'thật_sự': 1.0, 'tiện_lợi': 1.0, 'tươi': 1.0, 'tận_tình': 1.0, 'tối': -1.0, 'tốt': 1.0, 'xa': -1.0, 'xanh_mát': 1.0, 'yên_tĩnh': 2.0, 'yếu': 1.0, 'âm_nhạc': 1.0, 'ít': -1.0, 'đa_dạng': 1.0, 'đầy_đủ': 1.0, 'đậm_đà': 1.0, 'đắt': -1.0, 'đắt_đỏ': -1.0, 'đặc_biệt': 1.0, 'đặc_sắc': 1.0, 'đẹp': 1.0, 'đẹp_mắt': 1.0, 'đủ': 1.0, 'ấm_cúng': 1.0, 'ồn_ào': -1.0, 'ổn_định': 1.0, 'chú_ý': 1.0, 'chờ': -1.0, 'chờ_đợi': -1.0, 'cải_thiện': 1.0, 'giúp_đỡ': 1.0, 'giải_quyết': 1.0, 'giải_trí': 1.0, 'hương_vị': 1.0, 'hạn_chế': -1.0, 'hấp_dẫn': 1.0, 'khuyến_mãi': 1.0, 'linh_hoạt': 1.0, 'miễn_phí': 1.0, 'ngon_miệng': 1.0, 'nhất_quán': 1.0, 'phù_hợp': 1.0, 'quên': -1.0, 'thiếu': -1.0, 'tinh_tế': 1.0, 'tiện_nghi': 1.0, 'tương_xứng': 1.0, 'vệ_sinh': 1.0, 'đáp_ứng': 1.0, 'đồng_đều': 2.0}\n"
+      "{'an_toàn': 1.0, 'bình_thường': -1.0, 'cao': -1.0, 'chu_đáo': 1.0, 'chung': 1.0, 'chuyên_nghiệp': 1.0, 'chậm': -1.0, 'chật_chội': -1.0, 'công_phu': 1.0, 'cứng': 1.0, 'dễ': 1.0, 'đẹp': 1.0, 'gần': 1.0, 'hay': 1.0, 'hiện_đại': 1.0, 'hợp_lý': 1.0, 'khác': 1.0, 'khó_chịu': -1.0, 'kém': -1.0, 'lâu': -1.0, 'lãng_mạn': 1.0, 'lịch_sự': 1.0, 'lớn': 1.0, 'mặn': -1.0, 'mới': 1.0, 'ngon': 1.0, 'ngoài_trời': 1.0, 'ngắn': -1.0, 'ngọt': 1.0, 'nhanh': 1.0, 'nhanh_nhẹn': 1.0, 'nhiều': 1.0, 'nhiệt_tình': 1.0, 'nhỏ': -1.0, 'niềm_nở': 1.0, 'no': 1.0, 'nóng': 1.0, 'nổi_tiếng': 1.0, 'phong_phú': 1.0, 'rộng_rãi': 1.0, 'sang_trọng': 1.0, 'sáng': 1.0, 'sạch_sẽ': 1.0, 'sẵn_sàng': 1.0, 'thoáng_đãng': 1.0, 'thoải_mái': 1.0, 'thuận_lợi': 1.0, 'thuận_tiện': 1.0, 'thân_thiện': 1.0, 'thơm': 1.0, 'thư_giãn': 1.0, 'thật_sự': 1.0, 'tiện_lợi': 1.0, 'tươi': 1.0, 'tận_tình': 1.0, 'tối': -1.0, 'tốt': 1.0, 'xa': -1.0, 'xanh_mát': 1.0, 'yên_tĩnh': 2.0, 'yếu': 1.0, 'âm_nhạc': 1.0, 'ít': -1.0, 'đa_dạng': 1.0, 'đầy_đủ': 1.0, 'đậm_đà': 1.0, 'đắt': -1.0, 'đắt_đỏ': -1.0, 'đặc_biệt': 1.0, 'đặc_sắc': 1.0, 'đẹp_mắt': 1.0, 'đủ': 1.0, 'ấm_cúng': 1.0, 'ồn_ào': -1.0, 'ổn_định': 1.0, 'chú_ý': 1.0, 'chờ': -1.0, 'chờ_đợi': -1.0, 'cải_thiện': 1.0, 'giúp_đỡ': 1.0, 'giải_quyết': 1.0, 'giải_trí': 1.0, 'hương_vị': 1.0, 'hạn_chế': -1.0, 'hấp_dẫn': 1.0, 'khuyến_mãi': 1.0, 'linh_hoạt': 1.0, 'miễn_phí': 1.0, 'ngon_miệng': 1.0, 'nhất_quán': 1.0, 'phù_hợp': 1.0, 'quên': -1.0, 'thiếu': -1.0, 'tinh_tế': 1.0, 'tiện_nghi': 1.0, 'tương_xứng': 1.0, 'vệ_sinh': 1.0, 'đáp_ứng': 1.0, 'đồng_đều': 2.0}\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "bfcf9159-b414-4799-8098-76dc3f4b88e8",
    "metadata": {},
    "outputs": [
@@ -251,18 +251,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "đồ          |uống        |không       |phong_phú   |\n",
-      "N           |V           |R           |A           |\n",
-      "============================================================\n",
+      "Máy     |rửa     |chén    |Bosch   |SMS46MI05E|rửa     |sạch    |,       |tiết_kiệm|nước    |và      |hoạt_động|êm_ái   |,       |nhưng   |giá_thành|cao     |và      |kích_thước|lớn     |không   |phù_hợp |với     |căn     |bếp     |nhỏ     |.       |\n",
+      "N       |V       |N       |Np      |Ny      |V       |A       |F       |V       |N       |C       |V       |A       |F       |C       |N       |A       |C       |N       |A       |R       |V       |E       |Nc      |N       |A       |F       |\n",
+      "================================================================================================================================================================================================================================\n",
       "\n",
       "\n",
-      "****************************************************************************************************\n"
+      "****************************************************************************************************\n",
+      "('giá_thành', 'cao', 'NEG', 'NA')\n",
+      "('kích_thước', 'lớn', 'POS', 'NA')\n",
+      "('bếp', 'nhỏ', 'NEG', 'NA')\n"
      ]
     }
    ],
    "source": [
     "from abc import ABC, abstractmethod\n",
     "from typing import Tuple\n",
+    "\n",
+    "\n",
+    "noun = ['N', 'Nc', 'Ny', 'Np', 'Nu']\n",
+    "\n",
     "\n",
     "class BaseRule(ABC):\n",
     "    @classmethod\n",
@@ -282,7 +289,7 @@
     "    def parse(cls, tokens: list, tags: list)-> list:\n",
     "        results = []\n",
     "        for i in range(len(tags) - 1):\n",
-    "            if tags[i] == 'N' and tags[i+1] == 'A':\n",
+    "            if tags[i] in noun and tags[i+1] == 'A':\n",
     "                label = 'UNK'\n",
     "                if tokens[i+1] in adj.keys():\n",
     "                    if adj[tokens[i+1]] < 0:\n",
@@ -293,6 +300,24 @@
     "        return results\n",
     "\n",
     "\n",
+    "class NCARule(BaseRule):\n",
+    "    \"\"\"\n",
+    "        Tìm cấu trúc N - C - A. Ví dụ: Cơm thì dẻo, nhưng mặn quá\n",
+    "    \"\"\"\n",
+    "    def parse(cls, tokens: list, tags: list)-> list:\n",
+    "        results = []\n",
+    "        for i in range(len(tags) - 2):\n",
+    "            if tags[i] in noun and tags[i+1] == 'C' and tags[i+2] == 'A':\n",
+    "                label = 'UNK'\n",
+    "                if tokens[i+1] in adj.keys():\n",
+    "                    if adj[tokens[i+1]] < 0:\n",
+    "                        label = 'POS'\n",
+    "                    else:\n",
+    "                        label = 'NEG'\n",
+    "                results.append((tokens[i], f\"{tokens[i+1]} {tokens[i+2]}\" , label, 'NCA'))\n",
+    "        return results\n",
+    "\n",
+    "\n",
     "class NRARule(BaseRule):\n",
     "    \"\"\"\n",
     "        Tìm cấu trúc N - R - A. Ví dụ: phòng không sạch lắm, cafe không ngon\n",
@@ -300,7 +325,7 @@
     "    def parse(cls, tokens: list, tags: list)-> list:\n",
     "        results = []\n",
     "        for i in range(len(tags) - 2):\n",
-    "            if tags[i] == 'N' and tags[i+1] == 'R' and tags[i+2] == 'A':\n",
+    "            if tags[i] in noun and tags[i+1] == 'R' and tags[i+2] == 'A':\n",
     "                label = 'UNK'\n",
     "                if tokens[i+1] in adj.keys():\n",
     "                    if adj[tokens[i+1]] < 0:\n",
@@ -336,17 +361,24 @@
     "\n",
     "\"\"\"\n",
     "cafe bình thường, nhạc hay\n",
-    "cafe ngon, nhạc ồn ào quá\n",
+    "cafe ngon, nhưng khách ồn ào quá\n",
     "cafe không ngon, nhưng nhạc hay\n",
+    "Macbook thì đẹp, pin lâu, nhưng mà giá cao quá\n",
+    "\n",
     "\"\"\"\n",
     "\n",
-    "test_doc = \"đồ uống không phong phú\"\n",
+    "test_doc = \"\"\"\n",
+    "Máy rửa chén Bosch SMS46MI05E rửa sạch, \n",
+    "tiết kiệm nước và hoạt động êm ái, \n",
+    "nhưng giá thành cao và kích thước lớn không phù hợp với căn bếp nhỏ.\n",
+    "\"\"\"\n",
     "tokens, tags = ViPosTagger.postagging(ViTokenizer.tokenize(test_doc))\n",
-    "pprint(tokens, tags, width=12)\n",
+    "pprint(tokens, tags, width=8)\n",
     "print('*'*100)\n",
     "\n",
     "parser = RuleParser()\n",
     "parser.add_rule(NARule())\n",
+    "parser.add_rule(NCARule())\n",
     "parser.add_rule(NRARule())\n",
     "\n",
     "matches = parser.execute(tokens, tags)\n",
@@ -414,6 +446,9 @@
       "****************************************************************************************************\n",
       "Nhân viên lễ tân thân thiện, nhưng phục vụ bàn còn thiếu kinh nghiệm.\n",
       "('lễ_tân', 'thân_thiện', 'POS', 'NA')\n",
+      "****************************************************************************************************\n",
+      "Không gian trang trí hiện đại, nhưng thiếu sự ấm cúng.\n",
+      "('sự', 'ấm_cúng', 'POS', 'NA')\n",
       "****************************************************************************************************\n",
       "Thực đơn phong phú, nhưng các món ăn đôi khi không nhất quán về chất lượng.\n",
       "('Thực_đơn', 'phong_phú', 'POS', 'NA')\n",
